TestSuite/errors/err0123.pas
uses GraphABC;
type TRec = record
a : integer;
b : array of char;
end;

var 
s : TRec := (a:2;b:(1,2,3));
begin
end.